[JENKINS-54674] Activate JDK 11 testing with environment variable
When using '-e JDK11=true' in the container starting command, we activate the
JDK11 test